--- a/rankplot.tex
+++ b/rankplot.tex
@@ -1,5 +1,7 @@
 \begin{figure}
-\caption{Curva de ranqueamento médio de todas as bases com mais de 200 exemplos.}
+\label{ALCsrank}
+\caption{Curva de ranqueamento médio de todas as bases com mais de 200 exemplos.
+\textit{Suavizada por média móvel com largura de dez exemplos.}}
 \begin{center}
 \begin{tikzpicture}[scale=1]
 \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
