--- a/stratsALCKappaFriedbest.tex
+++ b/stratsALCKappaFriedbest.tex
@@ -1,5 +1,7 @@
 \begin{table}[h]
-\caption{Um contra um: cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor ALCKappa para melhor aprendiz que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}
+\caption{Um contra um: cada asterisco/cruz/ponto indica quando o algoritmo na
+linha tem melhor ALCKappa para melhor aprendiz que o algoritmo na coluna com intervalo
+de confiança de 0.99/0.95/0.90.}
 \begin{center}
 \begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|c}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 & 20 & 21\\
