anÃ¡lise de risco

--- a/contexto.tex
+++ b/contexto.tex
@@ -70,11 +70,13 @@ $d(\bm{x},\bm{u})$ medida de distância
 $sim(\bm{x},\bm{u})$ medida de similaridade
 $\cent$ orçamento ou número de consultas
 
-\tar{explicar usos de rótulo e classe}
+\tar{explicar uso dos termos rótulo e classe; aprendiz, classificador e algoritmo de aprendizado}
 
 \red{explicar que vai ser adotada uma notação uniforme que compreenda AL, ELM
  e ap. inc.}
 
+ \tar{explicar binômio (?) exploração-prospecção exploration-exploitation}
+ 
  \input active-learning
  \input elm
  \input meta
