--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -135,6 +135,15 @@ para uma dada estratégia}
 seria muito óbvio?}
 
 \section{Meta-estratégia}
+\tar{mais metafeatures:
+ só usa atributos nominais (NB,...)
+2- só usa atributos numéricos (SVM, ELM, ...)
+3- sofre com atributos irrelevantes (5NN ou medir impacto de adicionar atts irrelevantes)
+4- seleciona atributos internamente (árvores)
+5- fornece boas estimativas de probabilidade (medir entropia média pra saber)
+6- é baseado em distância (5NN)
+7- fronteira de decisao horiz e vertical (arvore)}
+
 \ano{\citep{conf/ijcnn/SoutoPSACLS08}, sobre clustering,
 usam ranking médio como default:
 Method SRC
