--- a/experimentos.tex
+++ b/experimentos.tex
@@ -2,7 +2,18 @@
 \chapter{Experimentos e Resultados}\label{experimentos}
 Neste capítulo são apresentados os experimentos comparativos de estratégias
 e seus resultados.
-\ano{descrever cada seção?}
+Na Seção \ref{prep}, é definido o subconjunto de estratégias e aprendizes mais relevantes
+para os experimentos.
+Nas demais seções é feita a demonstração de que as estratégias propostas SGmulti e
+agnóstica baseada em densidade (prefixo ATU) são competitivas.
+Adicionalmente, constatações relevantes para o problema da escolha de estratégias
+são fornecidas.
+A análise experimental é dividida em duas partes:
+\textit{geral}, na Seção \ref{geral}, em que as estratégias são comparadas
+ao longo de todas as \ano{$234534$} combinações de aprendizes e estratégias;
+e, \textit{por aprendiz},
+na Seção \ref{isolado},
+onde a comparação é feita para cada aprendiz separadamente.
 
 \section{Preparação} \label{prep}
 Devido à grande quantidade de fatores envolvidos nos experimentos,
@@ -116,6 +127,8 @@ O grupo reduzido de estratégias é apresentado na Tabela \ref{stratDistsRedux}.
 Apesar dessa particularidade e do alto desempenho reportado na próxima seção (\ref{analise}),
 não é do conhecimento do autor a existência de trabalhos que empreguem essa
 medida de distância.
+
+\ano{encurtar caption das duas tabelas}
 
 \newpage
 \input stratDistsRedux
