antes de juntar RF

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1365,3 +1365,25 @@ year = {2006}
   \URL =         "http://SunSITE.Informatik.RWTH-Aachen.DE/Publications/CEUR-WS/Vol-35/03-BensuanGiraud-CarrierKennedy.ps",
 }
 
+@phdthesis{chermanaprendizado,
+  title={Aprendizado de m{\'a}quina multirr{\'o}tulo: explorando a depend{\^e}ncia de r{\'o}tulos e o aprendizado ativo},
+  author={Cherman, Everton Alvares},
+  year={2013},
+  school={Universidade de S{\~a}o Paulo}
+}
+
+@Article{journals/pieee/CrawfordTY13,
+  title =       "Active Learning: Any Value for Classification of
+                 Remotely Sensed Data?",
+  author =      "Melba M. Crawford and Devis Tuia and Hsiuhan Lexie
+                 Yang",
+  journal =     "Proceedings of the IEEE",
+  year =        "2013",
+  number =      "3",
+  volume =      "101",
+  bibdate =     "2013-02-24",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/pieee/pieee101.html#CrawfordTY13",
+  pages =       "593--608",
+  URL =         "http://dx.doi.org/10.1109/JPROC.2012.2231951",
+}
