--- a/experimentos.tex
+++ b/experimentos.tex
@@ -10,7 +10,7 @@ Adicionalmente, constatações relevantes para o problema da escolha de estratégia
 são fornecidas.
 A análise experimental é dividida em duas partes:
 \textit{geral}, na Seção \ref{geral}, em que as estratégias são comparadas
-ao longo de todas as \ano{$234534$} combinações de aprendizes e estratégias;
+ao longo de todas as \ano{$xxxx$} combinações de aprendizes e estratégias;
 e, \textit{por aprendiz},
 na Seção \ref{isolado},
 onde a comparação é feita para cada aprendiz separadamente.
