--- a/resumo.tex
+++ b/resumo.tex
@@ -1,4 +1,6 @@
 \chapter*{Resumo}
+\esb{agradecimentos vai só na versão revisada?}
+
 \ano{arrumar vírgulas e pontos nos números}
 
 \tar{possível novo título:}
