--- a/rankplotRisco.tex
+++ b/rankplotRisco.tex
@@ -1,5 +1,5 @@
 \begin{figure}
-\caption{Curva de ranqueamento médio de todas as bases com mais de 200 exemplos.
+\caption{Instabilidade ranqueada das estratégias.
  \textit{Detalhes na Figura \ref{curvas}.}}
 \label{curvasrankdesvio}
 \begin{center}
