--- a/stratsALCKappaFriedRFRedux.tex
+++ b/stratsALCKappaFriedRFRedux.tex
@@ -4,15 +4,15 @@
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11\\
 1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   \\
 2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   \\ \hline
-3 - Mar  	&   &   & - &   &   &   &   &   &   &   &   \\
-4 - EERent	&   &   &   & - &   &   &   &   &   &   &   \\ \hline
-5 - EERacu	&   &   &   &   & - &   &   &   &   &   &   \\
-6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   &   \\ \hline
-7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   \\
-8 - TUman	&   &   &   &   &   &   &   & - &   &   &   \\ \hline
-9 - \textbf{ATUman}	&   &   &   &   &   &   &   &   & - &   &   \\
-10 - TUmah	&   &   &   &   &   &   &   &   &   & - &   \\ \hline
-11 - \textbf{ATUmah}	&   &   &   &   &   &   &   &   &   &   & - \\\end{tabular}}
+3 - Mar  	& * & * & - & + & * &   & * &   & + &   & * \\
+4 - EERent	& * & * &   & - &   &   &   &   &   &   &   \\ \hline
+5 - EERacu	& * & * &   &   & - &   &   &   &   &   &   \\
+6 - \textbf{SGmulti}	& * & * &   &   &   & - & + &   &   &   & + \\ \hline
+7 - DWeuc	& * & . &   &   &   &   & - &   &   &   &   \\
+8 - TUman	& * & * &   & * & * & * & * & - & * &   & * \\ \hline
+9 - \textbf{ATUman}	& * & * &   &   &   &   &   &   & - &   &   \\
+10 - TUmah	& * & * &   & * & * & * & * &   & * & - & * \\ \hline
+11 - \textbf{ATUmah}	& * & . &   &   &   &   &   &   &   &   & - \\\end{tabular}}
 \label{stratsALCKappaFriedRFRedux}
 \end{center}
 \end{table}
